src/objects/SkillProfie__c.object
<CustomObject>
    <description>To link Skill and profile object</description>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <formula>Profile_No__r.Last_Name__c  &amp; &quot;, &quot; &amp;  Profile_No__r.First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_No__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Profile #</label>
        <referenceTo>Profile__c</referenceTo>
        <relationshipLabel>Skills</relationshipLabel>
        <relationshipName>SkillProfies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Skill_Name__c</fullName>
        <formula>Skill_No__r.Skill_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Skill Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skill_No__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Skill #</label>
        <referenceTo>Skill__c</referenceTo>
        <relationshipLabel>Profiles</relationshipLabel>
        <relationshipName>SkillProfies</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SkillProfie</label>
    <nameField>
        <displayFormat>SP-{0000}</displayFormat>
        <label>SkillProfie No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SkillProfies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>